add check extra files

--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
 .same { color: #00c; } 
 .mod { color: #f08; }
 .up td { background-color: #fcc; padding: 5px; }
-.fix td { background-color: #ccf; padding: 5px; }
+.fix, .fix td { background-color: #ccf; padding: 5px; }
 .ng {color: #c00; font-weight: bold; }
 .ok { color: #0c0; }
