add check box width

--- a/style.css
+++ b/style.css
@@ -5,3 +5,4 @@
 .fix, .fix td { background-color: #ccf; padding: 5px; }
 .ng {color: #c00; font-weight: bold; }
 .ok { color: #0c0; }
+.ckbox { width: 1em; }
